Overflow bug fixed, some inputs in the demographics page

--- a/express-react-ts/src/client/scss/home/home.scss
+++ b/express-react-ts/src/client/scss/home/home.scss
@@ -97,6 +97,7 @@ input:focus {
 }
 
 .home-page-header-avatar-popup-container{
+  z-index: 99;
   position: absolute;
   right: 0;
   top: 60px;
