--- a/express-react-ts/src/client/scss/patient-profiles/demographics.scss
+++ b/express-react-ts/src/client/scss/patient-profiles/demographics.scss
@@ -3,3 +3,14 @@
 .demographics-page-outermost-container {
   display: block;
 }
+
+.demographics-form {
+  padding-top: 36px;
+  font-size: 24px;
+}
+
+.demographics-form input {
+  width: 100%;
+  height: 46px;
+  font-size: 1rem;
+}
